fix: header elements alignment

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -122,6 +122,7 @@ h3 {
   .info-route-nav {
     nav {
       gap: 1rem;
+      justify-content: center;
     }
 
     .counter {
